--- a/index.css
+++ b/index.css
@@ -19,6 +19,10 @@
         width: 10vh;
         margin: 3vh;
     }
+    .dash0{
+        height: 10vh;
+        width: 10vh;
+    }
     .box{
         width: 40vw;
         height: 40vw;
@@ -67,6 +71,10 @@
         top: 14vh;
         right: 23vw;
     }
+    .dash0{
+        height: 4vh;
+        width: 4vh;
+    }
     .box{
         width: 90vw;
         height: 90vw;
@@ -90,7 +98,7 @@
 
 body{
     overflow-x: hidden;
-    background-color: #0B0C10;
+    background-color: #17252A;
     margin: 0;
 }
 .wrapper{
@@ -101,7 +109,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #0B0C10;
+    background-color: #17252A;
     font-family: 'Ubuntu',sans-serif;
     letter-spacing: 1px;
     font-weight: bold;
@@ -115,7 +123,7 @@ body{
     justify-content: center;
     font-weight: bolder;
 
-    color: #45A29E;
+    color: #add3e0;
 }
 .other-elem{
     display: flex;
@@ -136,18 +144,16 @@ body{
 
 }
 
-.player-img{
+.dash0{
+    stroke:#66FCF1;
 
-
-    border: 1px #66FCF1 solid;
-    border-radius: 2px;
-
-
+    stroke-width:3;
+    fill:none;
 }
 .box{
 
-    background-color: #1F2833;
-
+    background-color: #2c4047;
+    fill-opacity: 0.5;
 
 
 }
@@ -165,32 +171,35 @@ body{
 
 }
 .small-box{
-    background-color:#0B0C10 ;
+    opacity: 1;
+    z-index: 2;
+    background-color:#17252A ;
+    border: 3px solid transparent;
 }
 .space{
-
-    border-bottom: 1px #45A29E solid;
-    border-right: 1px #45A29E solid;
+    opacity: 1;
+    border-bottom: 1px #2c4047 solid;
+    border-right: 1px #2c4047 solid;
 
 }
 .small-row>.space:last-child{
-    border-right: 0px #45A29E solid;
+    border-right: 0px #2c4047 solid;
 
 }
 .small-box>.small-row:last-child>.space{
 
-    border-bottom:  0px #45A29E solid;
+    border-bottom:  0px #2c4047 solid;
 
 }
 .space:hover{
-    background-color: #1F2833;
+    background-color: #2c4047;
 
 }
 .player1{
     background-color: #66FCF1;
 }
 .player2{
-    background-color: #C5C6C7;
+    background-color: white;
 }
 .number{
     height: 100%;
